--- a/_drafts/2016-12-12-lab41_swapout.md
+++ b/_drafts/2016-12-12-lab41_swapout.md
@@ -1,18 +1,21 @@
 ---
 layout: post
 title: "Lab41 Reading Group: Swapout: Learning an Ensemble of Deep Architectures"
+gab41: https://gab41.lab41.org/lab41-reading-group-swapout-learning-an-ensemble-of-deep-architectures-e67d2b822f8a
 description: >
   Want to train a network but unsure about dropout vs. stochastic depth?
   Should you use a ResNet? Stop worry and use Swapout; it does all that and
   more!
 image: /files/swapout/header.jpg
+image_alt: >
+  A picture of a building with black and white windows which reminds me of the
+  diagrams used below to describe swapout
 categories: lab41
 ---
 
+{% capture file_dir %}/files/swapout/{% endcapture %}
 
-![A picture of a building with black and white windows which reminds me of the
-diagrams used below to describe swapout]({{ site.url
-}}/files/swapout/header.jpg)
+{% include lead_image.html %}
 
 Next up for the reading group is [a paper about a new stochastic training
 method][arxiv] written by Saurabh Singh, Derek Hoiem, and David Forsyth of the
@@ -30,11 +33,12 @@ with a stochastically trained network that I will only touch on.
 As you may recall, dropout works by randomly setting individual neuron outputs
 in a network to zero, essentially dropping those neurons from training and
 hence forcing the network to use a variety of signals instead of over-training
-on one. Stochastic depth ([covered in a previous post][sd_post]) is similar, but instead
-of dropping neurons it bypasses whole layers! We can think of these operations
-a little more mathematically, but first I'll have to define some notation.
+on one. Stochastic depth ([covered in a previous post][sd_post]) is similar,
+but instead of dropping neurons it bypasses whole layers! We can think of
+these operations a little more mathematically, but first I'll have to define
+some notation.
 
-[sd_post]: TODO
+[sd_post]: {% post_url 2016-07-11-lab41_stochastic_depth %}
 
 I'll use block to mean a set of layers in some specific configuration (for
 example, a convolution followed by a ReLU), and a unit to be one of the
@@ -49,7 +53,9 @@ always reporting `F(X)`. The paper includes a figure, which I've edited and
 included below, showing feed-forward and ResNets in this scheme:
 
 ![A diagram representation of blocks and units for a feed-forward and ResNet
-architecture]({{ site.url }}/files/swapout/feed_and_res.svg)
+architecture][feed_res_image]
+
+[feed_res_image]: {{ file_dir }}/feed_and_res.svg 
 
 Things become more interesting when we start thinking about stochastic
 training methods in this manner. Dropout can be thought of as randomly
@@ -61,7 +67,9 @@ methods are shown in the figure below, which is again has been modified from
 the paper:
 
 ![A diagram representation of blocks and units for dropout and stochastic
-depth architecture]({{ site.url }}/files/swapout/drop_and_depth.svg)
+depth architecture][drop_stoch_image]
+
+[drop_stoch_image]: {{ file_dir }}/drop_and_depth.svg
 
 So now that I've laid the groundwork, what does swapout add? Well, add isn't
 really the right word, swapout combines! It randomly selects from the four
@@ -78,7 +86,9 @@ Both of these architectures are shown in the figure below, which is again from
 the paper with modification:
 
 ![A diagram representation of blocks and units for skipforward and swapout
-depth architecture]({{ site.url }}/files/swapout/swapout.svg)
+depth architecture][skip_swap_image]
+
+[skip_swap_image]: {{ file_dir }}/swapout.svg
 
 One of the dilemmas when using stochastic training methods is: how do I use
 the network at inference time? When training the network is constantly
