--- a/_drafts/2016-09-08-lab41_resnet.md
+++ b/_drafts/2016-09-08-lab41_resnet.md
@@ -1,17 +1,20 @@
 ---
 layout: post
 title: "Lab41 Reading Group: Deep Residual Learning for Image Recognition"
+gab41: https://gab41.lab41.org/lab41-reading-group-deep-residual-learning-for-image-recognition-ffeb94745a1f
 description: >
   Inception, AlexNet, VGG... There are so many network architectures, which
   one should you be using? The one everyone else is: ResNet! Come find out how
   it works!
 image: /files/resnet/header.jpg
+image_alt: >
+  ResNets are similar to highway networks, like this picture of the 280--94 highway interchange.
 categories: lab41
 ---
 
+{% capture file_dir %}/files/resnet/{% endcapture %}
 
-![ResNets are similary to highway networks, like this picture of the 280--94
-highway interchangei.]({{ site.url }}/files/resnet/header.jpg)
+{% include lead_image.html %}
 
 Today's [paper offers a new architecture for Convolution Networks][arxiv]. It
 was written by He, Zhang, Ren, and Sun from Microsoft Research. I'll warn you
@@ -46,10 +49,14 @@ increases. For example, they compare 20- and 56-layer networks and find the
 [bn_paper]: https://arxiv.org/abs/1502.03167
 [bn_post]: https://gab41.lab41.org/batch-normalization-what-the-hey-d480039a9e3b
 
-![A plot showing how deeper networks train less well than shallow
-networks.]({{ site.url}}/files/resnet/20_vs_56.png)
-_Comparison of 20- and 56-layer networks on CIFAR-10. Note that the 56-layer
-network performs more poorly in both training and testing._
+{% capture image_1 %} {{ site.url }}/files/resnet/20_vs_56.png {% endcapture %}
+{% include figure.html
+  url=image_1
+  image_alt="A plot showing how deeper networks train less well than shallow
+  networks."
+  caption="Comparison of 20- and 56-layer networks on CIFAR-10. Note that the
+  56-layer network performs more poorly in both training and testing."
+%}
 
 The authors then set up a thought experiment (or [gedankenexperiment][wiki] if
 you're a recovering physicist like me) to demonstrate that deeper networks
@@ -70,11 +77,14 @@ architecture. They construct their network of what they call residual building
 blocks. The image below shows one such block. These blocks have become known
 as ResBlocks.
 
-![A diagram of a ResNet block, or ResBlock]({{
-site.url}}/files/resnet/resblock.svg)
-_A ResBlock; a residual function f(x) is learned on the top and information is
-passed along the bottom unchanged. Image modified from Huang et al.'s
-Stochastic Depth paper._
+{% capture image_2 %} {{ site.url }}/files/resnet/resblock.svg {% endcapture %}
+{% include figure.html
+  url=image_2
+  image_alt="A diagram of a ResNet block, or ResBlock."
+  caption="A ResBlock; a residual function f(x) is learned on the top and
+  information is passed along the bottom unchanged. Image modified from Huang
+  et al.'s Stochastic Depth paper."
+%}
 
 The ResBlock is constructed out of normal network layers connected with
 [rectified linear units][relu] (ReLUs) and a pass-through below that feeds
@@ -87,13 +97,13 @@ two.
 To get a little into the math behind the ResBlock: let us assume that a set of
 layers would perform best if they learned a specific function, `h(x)`. The
 authors note that the residual, `f(x) = h(x) − x`, can be learned instead and
-combined with the original input such that we recover `h(x)` as follows: `h(x) =
-f(x) + x`. This can be accomplished by adding a `+x` component to the network,
-which, thinking back to our thought experiment, is simply the identity
-function. The authors hope that adding this "pass-through" to their layers
-will aid in training. As with most deep learning, there is only this intuition
-backing up the method and not any deeper understanding. However, as the
-authors show, it works, and in that end that's the only thing many of us
+combined with the original input such that we recover `h(x)` as follows: `h(x)
+= f(x) + x`. This can be accomplished by adding a `+x` component to the
+network, which, thinking back to our thought experiment, is simply the
+identity function. The authors hope that adding this "pass-through" to their
+layers will aid in training. As with most deep learning, there is only this
+intuition backing up the method and not any deeper understanding. However, as
+the authors show, it works, and in that end that's the only thing many of us
 practitioners care about.
 
 The paper also explores a few modifications to the ResBlock. The first is
@@ -112,11 +122,16 @@ networks. They even train a 1202-layer network to prove that it is feasible,
 but find that its performance is worse than the other networks examined in the
 paper.
 
-![A plot showing how deeper networks train better than shallow networks when
-using ResBlocks.]({{ site.url }}/files/resnet/resnet_18_vs_resnet_34.png)
-_A comparison of the performance of two networks: the ones on the left do not
-use ResBlocks, while the ones on the right do. Notice the the 34-layer network
-performs better than the 18-layer network, but only when using ResBlocks._
+{% capture image_3 %} {{ site.url }}/files/resnet/resnet_18_vs_resnet_34.png {% endcapture %}
+{% include figure.html
+  url=image_3
+  image_alt="A plot showing how deeper networks train better than shallow
+  networks when using ResBlocks."
+  caption="A comparison of the performance of two networks: the ones on the
+  left do not use ResBlocks, while the ones on the right do. Notice the the
+  34-layer network performs better than the 18-layer network, but only when
+  using ResBlocks."
+%}
 
 So that's it! He _et al._ proposed a new architecture motivated by thought
 experiments and the hope that it will work better than previous ones. They
