Add reading group cat

--- a/_posts/2016-09-08-lab41_resnet.md
+++ b/_posts/2016-09-08-lab41_resnet.md
@@ -9,7 +9,9 @@ description: >
 image: /files/resnet/header.jpg
 image_alt: >
   ResNets are similar to highway networks, like this picture of the 280--94 highway interchange.
-categories: lab41
+categories: 
+  - reading_group
+  - lab41
 ---
 
 {% capture file_dir %}/files/resnet/{% endcapture %}
