--- a/_posts/2016-12-12-lab41_swapout.md
+++ b/_posts/2016-12-12-lab41_swapout.md
@@ -10,7 +10,9 @@ image: /files/swapout/header.jpg
 image_alt: >
   A picture of a building with black and white windows which reminds me of the
   diagrams used below to describe swapout
-categories: lab41
+categories: 
+  - reading_group
+  - lab41
 ---
 
 {% capture file_dir %}/files/swapout/{% endcapture %}
