--- a/_posts/2016-12-23-vim_eldar.md
+++ b/_posts/2016-12-23-vim_eldar.md
@@ -6,10 +6,10 @@ description: >
   bright, high-contrast theme that looks great in the terminal or GUI!
 image: /files/vim_eldar/eldar_logo.png
 image_alt: >
-  "The Eldar color scheme logo. It is the word Eldar in grey on a black
+  The Eldar color scheme logo. It is the word Eldar in grey on a black
   background. The word is underlined with a line broken into six segments. The
   segments are red, yellow, green, cyan, blue, and purple, and match the
-  colors used in the color scheme."
+  colors used in the color scheme.
 categories: my_projects
 ---
 
