Add reading-group category page

--- a/_posts/2016-09-08-lab41_resnet.md
+++ b/_posts/2016-09-08-lab41_resnet.md
@@ -10,7 +10,7 @@ image: /files/resnet/header.jpg
 image_alt: >
   ResNets are similar to highway networks, like this picture of the 280--94 highway interchange.
 categories: 
-  - reading_group
+  - reading-group
   - lab41
 ---
 
