--- a/_posts/2016-12-12-lab41_swapout.md
+++ b/_posts/2016-12-12-lab41_swapout.md
@@ -11,7 +11,7 @@ image_alt: >
   A picture of a building with black and white windows which reminds me of the
   diagrams used below to describe swapout
 categories: 
-  - reading_group
+  - reading-group
   - lab41
 ---
 
