Add software-development category

--- a/_posts/2016-12-23-vim_eldar.md
+++ b/_posts/2016-12-23-vim_eldar.md
@@ -10,7 +10,9 @@ image_alt: >
   background. The word is underlined with a line broken into six segments. The
   segments are red, yellow, green, cyan, blue, and purple, and match the
   colors used in the color scheme.
-categories: my_projects
+categories:
+  - my_projects
+  - software-development
 ---
 
 {% capture file_dir %}/files/vim_eldar{% endcapture %}
