Add categories that already exist to some articles

--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -6,11 +6,13 @@ description: >
   college? I take a pre-trained model and find out!
 image: /files/sat2vec/Pasternak_The_Night_Before_the_Exam.jpg
 image_alt: >
-  An impressionistic painting titled "Night Before the Exam" by Leonid
+  An impressionistic painting titled 'Night Before the Exam' by Leonid
   Pasternak. The painting shows four students sitting around a kitchen table
   studying for a exam. One student holds a skull, while the others longue
   around smoking or studying books or papers.
 redirect_from: /2016/07/11/SAT2Vec/
+categories:
+  - machine-learning
 ---
 
 {% capture file_dir %}/files/sat2vec{% endcapture %}
