--- a/_posts/2016-12-23-vim_eldar.md
+++ b/_posts/2016-12-23-vim_eldar.md
@@ -11,7 +11,7 @@ image_alt: >
   segments are red, yellow, green, cyan, blue, and purple, and match the
   colors used in the color scheme.
 categories:
-  - my_projects
+  - my-projects
   - software-development
 ---
 
