Remove include template for lead image

--- a/_posts/2016-09-08-lab41_resnet.md
+++ b/_posts/2016-09-08-lab41_resnet.md
@@ -7,6 +7,7 @@ description: >
   one should you be using? The one everyone else is: ResNet! Come find out how
   it works!
 image: /files/resnet/header.jpg
+show_lead_image: True
 image_alt: >
   ResNets are similar to highway networks, like this picture of the 280--94 highway interchange.
 categories: 
@@ -15,8 +16,6 @@ categories:
 ---
 
 {% capture file_dir %}/files/resnet/{% endcapture %}
-
-{% include lead_image.html %}
 
 Today's [paper offers a new architecture for Convolution Networks][arxiv]. It
 was written by He, Zhang, Ren, and Sun from Microsoft Research. I'll warn you
