--- a/_posts/2016-12-23-vim_eldar.md
+++ b/_posts/2016-12-23-vim_eldar.md
@@ -5,6 +5,7 @@ description: >
   Check out Eldar, my custom Vim color scheme based on elflord. It is a
   bright, high-contrast theme that looks great in the terminal or GUI!
 image: /files/vim_eldar/eldar_logo.png
+show_lead_image: True
 image_alt: >
   The Eldar color scheme logo. It is the word Eldar in grey on a black
   background. The word is underlined with a line broken into six segments. The
@@ -16,9 +17,6 @@ categories:
 ---
 
 {% capture file_dir %}/files/vim_eldar{% endcapture %}
-
-{% comment %}{% include lead_image.html %} removed and hardcoded. {% endcomment %}
-[![{{ page.image_alt }}]({{ page.image }})][eldar]
 
 I use [Vim][vim] (actually [Neovim][neovim]) as my primary text editor. I
 write Python in it, against all advice I write C++ in it, and I even write
