--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -5,6 +5,7 @@ description: >
   Could Word2Vec pass the SAT analogies section and get accepted to a good
   college? I take a pre-trained model and find out!
 image: /files/sat2vec/Pasternak_The_Night_Before_the_Exam.jpg
+show_lead_image: True
 image_alt: >
   An impressionistic painting titled 'Night Before the Exam' by Leonid
   Pasternak. The painting shows four students sitting around a kitchen table
@@ -16,8 +17,6 @@ categories:
 ---
 
 {% capture file_dir %}/files/sat2vec{% endcapture %}
-
-{% include lead_image.html %}
 
 Word embeddings, like [Word2Vec][Word2Vec_paper] and [GloVe][GloVe_site], have
 proved to be a powerful way of representing text for machine learning
