--- a/_posts/2016-12-12-lab41_swapout.md
+++ b/_posts/2016-12-12-lab41_swapout.md
@@ -7,6 +7,7 @@ description: >
   Should you use a ResNet? Stop worry and use Swapout; it does all that and
   more!
 image: /files/swapout/header.jpg
+show_lead_image: True
 image_alt: >
   A picture of a building with black and white windows which reminds me of the
   diagrams used below to describe swapout
@@ -16,8 +17,6 @@ categories:
 ---
 
 {% capture file_dir %}/files/swapout/{% endcapture %}
-
-{% include lead_image.html %}
 
 Next up for the reading group is [a paper about a new stochastic training
 method][arxiv] written by Saurabh Singh, Derek Hoiem, and David Forsyth of the
