--- a/files/interview-prep/Interview Prep Python.ipynb
+++ b/files/interview-prep/Interview Prep Python.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import sqlite3\n",
-    "from nltk import edit_distance as dist"
+    "import sqlite3"
    ]
   },
   {
