--- a/files/interview-prep/Interview Prep Python.ipynb
+++ b/files/interview-prep/Interview Prep Python.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import sqlite3"
+    "import sqlite3\n",
+    "import random"
    ]
   },
   {
