normalized by not null sex and age

--- a/files/interview-prep/Interview Prep SQL Solutions.ipynb
+++ b/files/interview-prep/Interview Prep SQL Solutions.ipynb
@@ -185,14 +185,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "QUERY2 = \"\"\"\n",
     "SELECT \n",
-    "    COUNT(DISTINCT case_id) \n",
-    "    / (SELECT CAST(COUNT(DISTINCT case_id) AS FLOAT) FROM parties)\n",
+    "    COUNT(case_id) \n",
+    "    / (SELECT \n",
+    "            CAST(COUNT(case_id) AS FLOAT) \n",
+    "        FROM parties \n",
+    "        WHERE party_sex='male' \n",
+    "        OR party_sex='female' \n",
+    "        AND party_age IS NOT NULL)\n",
     "    AS percentage\n",
     "FROM parties\n",
     "WHERE party_sex = 'male'\n",
@@ -202,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -234,7 +239,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.241562</td>\n",
+       "      <td>0.151478</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -242,10 +247,10 @@
       ],
       "text/plain": [
        "   percentage\n",
-       "0    0.241562"
+       "0    0.151478"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
