doc: add explaination for exclusion of nulls

--- a/files/interview-prep/Interview Prep SQL Solutions.ipynb
+++ b/files/interview-prep/Interview Prep SQL Solutions.ipynb
@@ -180,7 +180,9 @@
     "calculate the ratio as this requires us to get the total number of collisions.\n",
     "We could hard-code the number, but I prefer calculating it as part of the\n",
     "query. There isn't a super elegant way to do it in SQLite, but a sub-query\n",
-    "works fine. We also have to cast to a float to avoid integer division."
+    "works fine. A significant portion of the records (more than 10%) have null \n",
+    "for age and sex, assuming the nulls are distributed evenly over age and sex, \n",
+    "they can be excluded from the total number of collisions. We also have to cast to a float to avoid integer division."
    ]
   },
   {
