slight enhancement: replace SUM by AVG

--- a/files/interview-prep/Interview Prep SQL Solutions.ipynb
+++ b/files/interview-prep/Interview Prep SQL Solutions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "0          9172565"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,13 +181,13 @@
     "We could hard-code the number, but I prefer calculating it as part of the\n",
     "query. There isn't a super elegant way to do it in SQLite, but a sub-query\n",
     "works fine. A significant portion of the records (more than 10%) have null \n",
-    "for age and sex, assuming the nulls are distributed evenly over age and sex, \n",
-    "they can be excluded from the total number of collisions. We also have to cast to a float to avoid integer division."
+    "for age and sex. Assuming the nulls are distributed evenly over age and sex, \n",
+    "they are excluded from the total number of collisions. We also have to cast to a float to avoid integer division."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -252,7 +252,7 @@
        "0    0.151478"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -457,7 +457,7 @@
        "19           2020             2984"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,23 +503,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "QUERY41 = \"\"\"\n",
     "SELECT \n",
     "  make,\n",
-    "  weekday_count / CAST(total AS FLOAT) AS weekday_ratio\n",
+    "  weekday_ratio\n",
     "FROM (    \n",
     "  SELECT\n",
     "    p.vehicle_make AS make,\n",
-    "    SUM(\n",
+    "    AVG(\n",
     "      CASE WHEN STRFTIME('%w', c.collision_date) IN ('0', '6') THEN 1 ELSE 0 END\n",
-    "    ) AS weekend_count,\n",
-    "    SUM(\n",
+    "    ) AS weekend_ratio,\n",
+    "    AVG(\n",
     "      CASE WHEN STRFTIME('%w', c.collision_date) IN ('0', '6') THEN 0 ELSE 1 END\n",
-    "    ) AS weekday_count,\n",
+    "    ) AS weekday_ratio,\n",
     "    count(1) AS total\n",
     "  FROM collisions AS c\n",
     "  LEFT JOIN parties AS p\n",
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -579,7 +579,7 @@
        "0  PETERBILT        0.90823"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
