Revert "fix: sub sample while matching case_id between collisions and parties"
This reverts commit 73bd7922adb21439b88085c7ec8ac7c952b93c72.

--- a/files/interview-prep/Interview Prep Python.ipynb
+++ b/files/interview-prep/Interview Prep Python.ipynb
@@ -47,8 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "REDUCTION_FACTOR = 10 \n",
-    "RAND_REMAINDER=int(random.random()*REDUCTION_FACTOR) # a random number no larger than REDUCTION_FACTOR"
+    "REDUCTION_FACTOR = 10"
    ]
   },
   {
@@ -58,12 +57,10 @@
    "outputs": [],
    "source": [
     "collisions = pd.read_sql(\n",
-    "    f\"SELECT * FROM collisions WHERE case_id%{REDUCTION_FACTOR} = {RAND_REMAINDER}\", \n",
+    "    f\"SELECT * FROM collisions WHERE ABS(RANDOM() % {REDUCTION_FACTOR}) = 0\", \n",
     "    con, \n",
     "    parse_dates=[\"collision_date\"]\n",
-    ")\n",
-    "# the end of case_id values act as decent pseudo uniform random number between 0--REDUCTION_FACTOR \n",
-    "# select case_id values ending in RAND_REMAINDER"
+    ")"
    ]
   },
   {
@@ -72,8 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select by the same case_id values\n",
-    "parties = pd.read_sql(f\"SELECT * FROM parties WHERE case_id%{REDUCTION_FACTOR} = {RAND_REMAINDER}\", con)"
+    "parties = pd.read_sql(f\"SELECT * FROM parties WHERE ABS(RANDOM() % {REDUCTION_FACTOR}) = 0\", con)"
    ]
   },
   {
