Apply SQL improvements from @quynhneo, thanks!
This closes #58.

--- a/files/interview-prep/Interview Prep SQL Solutions.ipynb
+++ b/files/interview-prep/Interview Prep SQL Solutions.ipynb
@@ -180,7 +180,12 @@
     "calculate the ratio as this requires us to get the total number of collisions.\n",
     "We could hard-code the number, but I prefer calculating it as part of the\n",
     "query. There isn't a super elegant way to do it in SQLite, but a sub-query\n",
-    "works fine. We also have to cast to a float to avoid integer division."
+    "works fine. We also have to cast to a float to avoid integer division.\n",
+    "\n",
+    "There are a lot of `NULL` values for age and sex. I assume they are\n",
+    "uncorrelated to age and sex which allows me to remove them. If we were worried\n",
+    "about this assumption, we could leave them in and treat the answer as a lower\n",
+    "bound."
    ]
   },
   {
@@ -192,7 +197,12 @@
     "QUERY2 = \"\"\"\n",
     "SELECT \n",
     "    COUNT(DISTINCT case_id) \n",
-    "    / (SELECT CAST(COUNT(DISTINCT case_id) AS FLOAT) FROM parties)\n",
+    "    / (\n",
+    "        SELECT CAST(COUNT(DISTINCT case_id) AS FLOAT) \n",
+    "        FROM parties \n",
+    "        WHERE party_age IS NOT NULL\n",
+    "        AND party_sex IS NOT NULL\n",
+    "        )\n",
     "    AS percentage\n",
     "FROM parties\n",
     "WHERE party_sex = 'male'\n",
@@ -234,7 +244,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.241562</td>\n",
+       "      <td>0.25769</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -242,7 +252,7 @@
       ],
       "text/plain": [
        "   percentage\n",
-       "0    0.241562"
+       "0     0.25769"
       ]
      },
      "execution_count": 7,
@@ -501,25 +511,20 @@
    "outputs": [],
    "source": [
     "QUERY41 = \"\"\"\n",
-    "SELECT \n",
-    "  make,\n",
-    "  weekday_count / CAST(total AS FLOAT) AS weekday_ratio\n",
-    "FROM (    \n",
-    "  SELECT\n",
-    "    p.vehicle_make AS make,\n",
-    "    SUM(\n",
-    "      CASE WHEN STRFTIME('%w', c.collision_date) IN ('0', '6') THEN 1 ELSE 0 END\n",
-    "    ) AS weekend_count,\n",
-    "    SUM(\n",
-    "      CASE WHEN STRFTIME('%w', c.collision_date) IN ('0', '6') THEN 0 ELSE 1 END\n",
-    "    ) AS weekday_count,\n",
-    "    count(1) AS total\n",
-    "  FROM collisions AS c\n",
-    "  LEFT JOIN parties AS p\n",
-    "    ON c.case_id = p.case_id\n",
-    "  GROUP BY make\n",
-    "  HAVING total >= 10000\n",
-    ")\n",
+    "SELECT\n",
+    "  p.vehicle_make AS make,\n",
+    "  AVG(\n",
+    "    CASE WHEN STRFTIME('%w', c.collision_date) IN ('0', '6') THEN 1 ELSE 0 END\n",
+    "  ) AS weekend_ratio,\n",
+    "  AVG(\n",
+    "    CASE WHEN STRFTIME('%w', c.collision_date) IN ('0', '6') THEN 0 ELSE 1 END\n",
+    "  ) AS weekday_ratio,\n",
+    "  count(1) AS total\n",
+    "FROM collisions AS c\n",
+    "LEFT JOIN parties AS p\n",
+    "  ON c.case_id = p.case_id\n",
+    "GROUP BY make\n",
+    "HAVING total >= 10000\n",
     "ORDER BY weekday_ratio DESC\n",
     "LIMIT 1\n",
     "\"\"\""
@@ -554,22 +559,26 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>make</th>\n",
+       "      <th>weekend_ratio</th>\n",
        "      <th>weekday_ratio</th>\n",
+       "      <th>total</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>PETERBILT</td>\n",
+       "      <td>0.09177</td>\n",
        "      <td>0.90823</td>\n",
+       "      <td>70579</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        make  weekday_ratio\n",
-       "0  PETERBILT        0.90823"
+       "        make  weekend_ratio  weekday_ratio  total\n",
+       "0  PETERBILT        0.09177        0.90823  70579"
       ]
      },
      "execution_count": 11,
@@ -614,12 +623,12 @@
     "WITH counter AS (\n",
     "  SELECT\n",
     "    p.vehicle_make AS make, \n",
-    "    SUM(\n",
+    "    AVG(\n",
     "      CASE WHEN STRFTIME('%w', c.collision_date) IN ('0', '6') THEN 1 ELSE 0 END\n",
-    "    ) AS weekend_count,\n",
-    "    SUM(\n",
+    "    ) AS weekend_fraction,\n",
+    "    AVG(\n",
     "      CASE WHEN STRFTIME('%w', c.collision_date) IN ('0', '6') THEN 0 ELSE 1 END\n",
-    "    ) AS weekday_count,\n",
+    "    ) AS weekday_fraction,\n",
     "    count(1) AS total\n",
     "  FROM collisions AS c\n",
     "  LEFT JOIN parties AS p\n",
@@ -630,9 +639,7 @@
     "\n",
     "SELECT * FROM (\n",
     "  SELECT \n",
-    "    *,\n",
-    "    weekend_count / CAST(total AS FLOAT) AS weekend_fraction,\n",
-    "    weekday_count / CAST(total AS FLOAT) AS weekday_fraction\n",
+    "    *\n",
     "  FROM counter\n",
     "  ORDER BY weekend_fraction DESC\n",
     "  LIMIT 1\n",
@@ -642,9 +649,7 @@
     "\n",
     "SELECT * FROM (\n",
     "  SELECT \n",
-    "    *,\n",
-    "    weekend_count / CAST(total AS FLOAT) AS weekend_fraction,\n",
-    "    weekday_count / CAST(total AS FLOAT) AS weekday_fraction\n",
+    "    *\n",
     "  FROM counter\n",
     "  ORDER BY weekday_fraction DESC\n",
     "  LIMIT 1\n",
@@ -679,44 +684,34 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>make</th>\n",
-       "      <th>weekend_count</th>\n",
-       "      <th>weekday_count</th>\n",
-       "      <th>total</th>\n",
        "      <th>weekend_fraction</th>\n",
        "      <th>weekday_fraction</th>\n",
+       "      <th>total</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>HARLEY-DAVIDSON</td>\n",
-       "      <td>19125</td>\n",
-       "      <td>30477</td>\n",
-       "      <td>49602</td>\n",
        "      <td>0.385569</td>\n",
        "      <td>0.614431</td>\n",
+       "      <td>49602</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>PETERBILT</td>\n",
-       "      <td>6477</td>\n",
-       "      <td>64102</td>\n",
-       "      <td>70579</td>\n",
        "      <td>0.091770</td>\n",
        "      <td>0.908230</td>\n",
+       "      <td>70579</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              make  weekend_count  weekday_count  total  weekend_fraction  \\\n",
-       "0  HARLEY-DAVIDSON          19125          30477  49602          0.385569   \n",
-       "1        PETERBILT           6477          64102  70579          0.091770   \n",
-       "\n",
-       "   weekday_fraction  \n",
-       "0          0.614431  \n",
-       "1          0.908230  "
+       "              make  weekend_fraction  weekday_fraction  total\n",
+       "0  HARLEY-DAVIDSON          0.385569          0.614431  49602\n",
+       "1        PETERBILT          0.091770          0.908230  70579"
       ]
      },
      "execution_count": 13,
