Replace random event sampling with deterministic
This closes #56.

--- a/files/interview-prep/Interview Prep Python.ipynb
+++ b/files/interview-prep/Interview Prep Python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,21 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "REDUCTION_FACTOR = 10"
+    "REDUCTION_FACTOR = 10 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "collisions = pd.read_sql(\n",
-    "    f\"SELECT * FROM collisions WHERE ABS(RANDOM() % {REDUCTION_FACTOR}) = 0\", \n",
+    "    f\"SELECT * FROM collisions WHERE case_id % {REDUCTION_FACTOR} = 0\", \n",
     "    con, \n",
     "    parse_dates=[\"collision_date\"]\n",
     ")"
@@ -65,11 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parties = pd.read_sql(f\"SELECT * FROM parties WHERE ABS(RANDOM() % {REDUCTION_FACTOR}) = 0\", con)"
+    "# Select parties with the same case_id as selected for collisions\n",
+    "parties = pd.read_sql(f\"SELECT * FROM parties WHERE case_id % {REDUCTION_FACTOR} = 0\", con)"
    ]
   },
   {
