--- a/files/interview-prep/Interview Prep Python Solutions.ipynb
+++ b/files/interview-prep/Interview Prep Python Solutions.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "collisions = pd.read_sql(\n",
-    "    f\"SELECT * FROM collisions WHERE ABS(RANDOM() % {REDUCTION_FACTOR}) = 0\", \n",
+    "    f\"SELECT * FROM collisions WHERE case_id % {REDUCTION_FACTOR} = 0\", \n",
     "    con, \n",
     "    parse_dates=[\"collision_date\"]\n",
     ")"
@@ -69,7 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parties = pd.read_sql(f\"SELECT * FROM parties WHERE ABS(RANDOM() % {REDUCTION_FACTOR}) = 0\", con)"
+    "# Select parties with the same case_id as selected for collisions\n",
+    "parties = pd.read_sql(f\"SELECT * FROM parties WHERE case_id % {REDUCTION_FACTOR} = 0\", con)"
    ]
   },
   {
@@ -152,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "918229"
+       "899955"
       ]
      },
      "execution_count": 7,
@@ -184,7 +185,7 @@
     {
      "data": {
       "text/plain": [
-       "0.13792466581685284"
+       "0.25815681787972583"
       ]
      },
      "execution_count": 8,
@@ -198,7 +199,14 @@
     "    & (parties[\"party_age\"].between(16, 25))\n",
     ")\n",
     "\n",
-    "len(parties[criteria][\"case_id\"].unique()) / len(parties[\"case_id\"].unique())"
+    "# There are a lot of NULLs, which I assume are uncorrelated to \n",
+    "# the real Age and Sex, so I remove them.\n",
+    "denominator_criteria = (\n",
+    "    (~parties[\"party_sex\"].isna())\n",
+    "    & (~parties[\"party_age\"].isna())\n",
+    ")\n",
+    "\n",
+    "len(parties[criteria][\"case_id\"].unique()) / len(parties[denominator_criteria][\"case_id\"].unique())"
    ]
   },
   {
@@ -228,26 +236,26 @@
      "data": {
       "text/plain": [
        "collision_date\n",
-       "2001    300\n",
-       "2002    370\n",
-       "2003    392\n",
-       "2004    392\n",
-       "2005    378\n",
-       "2006    396\n",
-       "2007    437\n",
-       "2008    457\n",
-       "2009    421\n",
-       "2010    398\n",
-       "2011    395\n",
-       "2012    434\n",
-       "2013    439\n",
-       "2014    418\n",
-       "2015    430\n",
-       "2016    445\n",
-       "2017    456\n",
-       "2018    455\n",
-       "2019    403\n",
-       "2020    296\n",
+       "2001    143\n",
+       "2002    336\n",
+       "2003    385\n",
+       "2004    424\n",
+       "2005    405\n",
+       "2006    418\n",
+       "2007    447\n",
+       "2008    529\n",
+       "2009    455\n",
+       "2010    408\n",
+       "2011    403\n",
+       "2012    419\n",
+       "2013    434\n",
+       "2014    393\n",
+       "2015    438\n",
+       "2016    455\n",
+       "2017    445\n",
+       "2018    421\n",
+       "2019    382\n",
+       "2020    350\n",
        "Name: jurisdiction, dtype: int64"
       ]
      },
@@ -346,30 +354,30 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>VOLKSWAGEN</th>\n",
-       "      <td>729.0</td>\n",
-       "      <td>1994.0</td>\n",
-       "      <td>2723.0</td>\n",
-       "      <td>0.267719</td>\n",
-       "      <td>0.732281</td>\n",
+       "      <th>HARLEY-DAVIDSON</th>\n",
+       "      <td>1849.0</td>\n",
+       "      <td>2972.0</td>\n",
+       "      <td>4821.0</td>\n",
+       "      <td>0.383530</td>\n",
+       "      <td>0.616470</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>FREIGHTLINER</th>\n",
-       "      <td>162.0</td>\n",
-       "      <td>1140.0</td>\n",
-       "      <td>1302.0</td>\n",
-       "      <td>0.124424</td>\n",
-       "      <td>0.875576</td>\n",
+       "      <th>PTRB</th>\n",
+       "      <td>119.0</td>\n",
+       "      <td>1151.0</td>\n",
+       "      <td>1270.0</td>\n",
+       "      <td>0.093701</td>\n",
+       "      <td>0.906299</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              is_weekend  is_weekday   total  weekend_ratio  weekday_ratio\n",
-       "vehicle_make                                                              \n",
-       "VOLKSWAGEN         729.0      1994.0  2723.0       0.267719       0.732281\n",
-       "FREIGHTLINER       162.0      1140.0  1302.0       0.124424       0.875576"
+       "                 is_weekend  is_weekday   total  weekend_ratio  weekday_ratio\n",
+       "vehicle_make                                                                 \n",
+       "HARLEY-DAVIDSON      1849.0      2972.0  4821.0       0.383530       0.616470\n",
+       "PTRB                  119.0      1151.0  1270.0       0.093701       0.906299"
       ]
      },
      "execution_count": 10,
@@ -427,7 +435,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -457,167 +465,172 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1582</th>\n",
+       "      <th>1587</th>\n",
        "      <td>TOYOTA</td>\n",
-       "      <td>214779</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1575</th>\n",
-       "      <td>TOYO</td>\n",
-       "      <td>15914</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1590</th>\n",
-       "      <td>TOYT</td>\n",
-       "      <td>14158</td>\n",
+       "      <td>210832</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1581</th>\n",
+       "      <td>TOYO</td>\n",
+       "      <td>15912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1600</th>\n",
+       "      <td>TOYT</td>\n",
+       "      <td>14212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1586</th>\n",
        "      <td>TOYOT</td>\n",
-       "      <td>237</td>\n",
+       "      <td>264</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1571</th>\n",
+       "      <th>1577</th>\n",
        "      <td>TOY</td>\n",
-       "      <td>202</td>\n",
+       "      <td>232</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1595</th>\n",
+       "      <th>1604</th>\n",
        "      <td>TOYTA</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1588</th>\n",
+       "      <td>TOYOTA/</td>\n",
        "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1583</th>\n",
-       "      <td>TOYOTA/</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1597</th>\n",
+       "      <th>1606</th>\n",
        "      <td>TOYTOA</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1596</th>\n",
+       "      <th>1583</th>\n",
+       "      <td>TOYOA</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1605</th>\n",
        "      <td>TOYTO</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1573</th>\n",
-       "      <td>TOYA</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1587</th>\n",
-       "      <td>TOYOYA</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1598</th>\n",
-       "      <td>TOYTOTA</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1592</th>\n",
+       "      <th>1595</th>\n",
+       "      <td>TOYOYA</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1602</th>\n",
        "      <td>TOYT.</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1577</th>\n",
-       "      <td>TOYOA</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1576</th>\n",
-       "      <td>TOYO /</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1593</th>\n",
-       "      <td>TOYT/</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1594</th>\n",
-       "      <td>TOYT/SCI</td>\n",
+       "      <th>1601</th>\n",
+       "      <td>TOYT /</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1634</th>\n",
-       "      <td>TYMCO</td>\n",
+       "      <th>1607</th>\n",
+       "      <td>TOYTOTA</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1603</th>\n",
+       "      <td>TOYT/</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1579</th>\n",
-       "      <td>TOYOR</td>\n",
+       "      <td>TOYA</td>\n",
        "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1585</th>\n",
-       "      <td>TOYOTS</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1601</th>\n",
-       "      <td>TOY`</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1600</th>\n",
-       "      <td>TOYT`</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1599</th>\n",
-       "      <td>TOYTR</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1635</th>\n",
-       "      <td>TYOT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1591</th>\n",
-       "      <td>TOYT /</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1589</th>\n",
-       "      <td>TOYR</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1588</th>\n",
-       "      <td>TOYP</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1584</th>\n",
-       "      <td>TOYOTA`</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1580</th>\n",
+       "      <td>TOYATA</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1582</th>\n",
+       "      <td>TOYO /</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1643</th>\n",
+       "      <td>TYOTA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1642</th>\n",
+       "      <td>TYO</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1585</th>\n",
        "      <td>TOYORA</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1584</th>\n",
+       "      <td>TOYOQ</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1578</th>\n",
-       "      <td>TOYOAT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1574</th>\n",
-       "      <td>TOYATA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1572</th>\n",
        "      <td>TOY0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1586</th>\n",
+       "      <th>1589</th>\n",
+       "      <td>TOYOTAQ</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1608</th>\n",
+       "      <td>TOYU</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1599</th>\n",
+       "      <td>TOYRTA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1598</th>\n",
+       "      <td>TOYR</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1597</th>\n",
+       "      <td>TOYP</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1596</th>\n",
+       "      <td>TOYOYTA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1593</th>\n",
+       "      <td>TOYOTTA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1592</th>\n",
+       "      <td>TOYOTS</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1591</th>\n",
+       "      <td>TOYOTOA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1590</th>\n",
+       "      <td>TOYOTO</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1594</th>\n",
        "      <td>TOYOY</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -627,39 +640,40 @@
       ],
       "text/plain": [
        "     vehicle_make   count\n",
-       "1582       TOYOTA  214779\n",
-       "1575         TOYO   15914\n",
-       "1590         TOYT   14158\n",
-       "1581        TOYOT     237\n",
-       "1571          TOY     202\n",
-       "1595        TOYTA      23\n",
-       "1583      TOYOTA/      20\n",
-       "1597       TOYTOA       7\n",
-       "1596        TOYTO       7\n",
-       "1573         TOYA       6\n",
-       "1587       TOYOYA       6\n",
-       "1598      TOYTOTA       5\n",
-       "1592        TOYT.       4\n",
-       "1577        TOYOA       3\n",
-       "1576       TOYO /       3\n",
-       "1593        TOYT/       3\n",
-       "1594     TOYT/SCI       2\n",
-       "1634        TYMCO       2\n",
-       "1579        TOYOR       2\n",
-       "1585       TOYOTS       2\n",
-       "1601         TOY`       1\n",
-       "1600        TOYT`       1\n",
-       "1599        TOYTR       1\n",
-       "1635         TYOT       1\n",
-       "1591       TOYT /       1\n",
-       "1589         TOYR       1\n",
-       "1588         TOYP       1\n",
-       "1584      TOYOTA`       1\n",
-       "1580       TOYORA       1\n",
-       "1578       TOYOAT       1\n",
-       "1574       TOYATA       1\n",
-       "1572         TOY0       1\n",
-       "1586        TOYOY       0"
+       "1587       TOYOTA  210832\n",
+       "1581         TOYO   15912\n",
+       "1600         TOYT   14212\n",
+       "1586        TOYOT     264\n",
+       "1577          TOY     232\n",
+       "1604        TOYTA      32\n",
+       "1588      TOYOTA/      23\n",
+       "1606       TOYTOA       7\n",
+       "1583        TOYOA       6\n",
+       "1605        TOYTO       5\n",
+       "1595       TOYOYA       5\n",
+       "1602        TOYT.       4\n",
+       "1601       TOYT /       2\n",
+       "1607      TOYTOTA       2\n",
+       "1603        TOYT/       2\n",
+       "1579         TOYA       2\n",
+       "1580       TOYATA       2\n",
+       "1582       TOYO /       2\n",
+       "1643        TYOTA       1\n",
+       "1642          TYO       1\n",
+       "1585       TOYORA       1\n",
+       "1584        TOYOQ       1\n",
+       "1578         TOY0       1\n",
+       "1589      TOYOTAQ       1\n",
+       "1608         TOYU       1\n",
+       "1599       TOYRTA       1\n",
+       "1598         TOYR       1\n",
+       "1597         TOYP       1\n",
+       "1596      TOYOYTA       1\n",
+       "1593      TOYOTTA       1\n",
+       "1592       TOYOTS       1\n",
+       "1591      TOYOTOA       1\n",
+       "1590       TOYOTO       1\n",
+       "1594        TOYOY       0"
       ]
      },
      "execution_count": 11,
