Fix Primož Roglič's name

--- a/files/tour-de-france/Tour de France 2022 Plot.ipynb
+++ b/files/tour-de-france/Tour de France 2022 Plot.ipynb
@@ -309,7 +309,7 @@
     "    # Save to disk\n",
     "    for ext in (\"png\", \"svg\"):\n",
     "        fig.savefig(\n",
-    "            f\"{filename}{ext}\", bbox_inches=\"tight\"\n",
+    "            f\"{filename}{ext}\", bbox_inches=\"tight\", facecolor=\"white\",\n",
     "        )"
    ]
   },
@@ -425,7 +425,7 @@
     "    # Save to disk\n",
     "    for ext in (\"png\", \"svg\"):\n",
     "        fig.savefig(\n",
-    "            f\"{filename}{ext}\", bbox_inches=\"tight\"\n",
+    "            f\"{filename}{ext}\", bbox_inches=\"tight\", facecolor=\"white\",\n",
     "        )"
    ]
   },
