Replace bare links with {% link %}

--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -127,4 +127,4 @@ applying to Stanford instead? (Go Bears!)
 
 The model's answer for all 36 analogies can be found [here][results].
 
-[results]: /blog/sat2vec/results/
+[results]: {% link files/sat2vec/results.md %}
