Update more citations

--- a/_posts/2016-12-12-lab41_swapout.md
+++ b/_posts/2016-12-12-lab41_swapout.md
@@ -19,11 +19,23 @@ categories:
 
 Next up for the reading group is [a paper about a new stochastic training
 method][arxiv] written by Saurabh Singh, Derek Hoiem, and David Forsyth of the
-University of Illinois at Urbana–Champaign. Their new training method is like
-[dropout][do], [stochastic depth][sd], and [ResNets][rn] but with its own
-special twist. I recommend picking up the paper after going through this post,
-it is very readable and includes an excellent section on performing inference
-with a stochastically trained network that I will only touch on.
+University of Illinois at Urbana--Champaign.[^singh] Their new training method
+is like [dropout][do], [stochastic depth][sd], and [ResNets][rn] but with its
+own special twist. I recommend picking up the paper after going through this
+post, it is very readable and includes an excellent section on performing
+inference with a stochastically trained network that I will only touch on.
+
+[^singh]:
+    {% citation
+      author_last="Singh, Saurabh and Hoiem, Derek and Forsyth, David"
+      work_title="Swapout: learning an ensemble of deep architectures"
+      container_title="Proceedings of the 30th International Conference on Neural Information Processing Systems (NIPS'16)"
+      date="2016"
+      publisher="Curran Associates Inc."
+      first_page="28"
+      last_page="36"
+      url="https://papers.neurips.cc/paper_files/paper/2016/hash/c51ce410c124a10e0db5e4b97fc2af39-Abstract.html"
+    %}
 
 [arxiv]: https://arxiv.org/abs/1605.06465
 [do]: https://arxiv.org/abs/1207.0580
