Various updates to lab41 posts

--- a/_posts/2016-09-08-lab41_resnet.md
+++ b/_posts/2016-09-08-lab41_resnet.md
@@ -17,9 +17,9 @@ categories:
 {% capture file_dir %}/files/resnet/{% endcapture %}
 
 Today's [paper offers a new architecture for Convolution Networks][arxiv]. It
-was written by He, Zhang, Ren, and Sun from Microsoft Research. I'll warn you
-before we start: this paper is ancient. It was published in the dark ages of
-deep learning sometime at the end of 2015, which I'm pretty sure means its
+was written by He, Zhang, Ren, and Sun from Microsoft Research.[^he] I'll warn
+you before we start: this paper is ancient. It was published in the dark ages
+of deep learning sometime at the end of 2015, which I'm pretty sure means its
 original format was papyrus; thankfully someone scanned it so that future
 generations could read it. But it is still worth blowing off the dust and
 flipping through it because the architecture it proposes has been used time
@@ -29,6 +29,17 @@ read][sd_blog]: [Deep Networks with Stochastic Depth][sd_paper]
 [arxiv]: https://arxiv.org/abs/1512.03385
 [sd_blog]: {% post_url 2016-07-11-lab41_stochastic_depth %}
 [sd_paper]: https://arxiv.org/abs/1603.09382
+
+[^he]:
+    {% citation
+      author_last="He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian"
+      work_title="Deep Residual Learning for Image Recognition"
+      container_title="2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)"
+      date="2016"
+      first_page="770"
+      last_page="778"
+      doi="10.1109/CVPR.2016.90"
+    %}
 
 He _et al._ begin by noting a seemingly paradoxical situation: very deep
 networks perform more poorly than moderately deep networks, that is, that
