--- a/_posts/2016-12-12-lab41_swapout.md
+++ b/_posts/2016-12-12-lab41_swapout.md
@@ -10,7 +10,7 @@ image: /files/swapout/header.jpg
 image_alt: >
   A picture of a building with black and white windows which reminds me of the
   diagrams used below to describe swapout
-categories: 
+categories:
   - reading-group
   - lab41
 ---
@@ -18,12 +18,13 @@ categories:
 {% capture file_dir %}/files/swapout/{% endcapture %}
 
 Next up for the reading group is [a paper about a new stochastic training
-method][arxiv] written by Saurabh Singh, Derek Hoiem, and David Forsyth of the
+method][paper] written by Saurabh Singh, Derek Hoiem, and David Forsyth of the
 University of Illinois at Urbana--Champaign.[^singh] Their new training method
-is like [dropout][do], [stochastic depth][sd], and [ResNets][rn] but with its
-own special twist. I recommend picking up the paper after going through this
-post, it is very readable and includes an excellent section on performing
-inference with a stochastically trained network that I will only touch on.
+is like [dropout][do][^hinton], [stochastic depth][sd][^huang], and
+[ResNets][rn][^he] but with its own special twist. I recommend picking up the
+paper after going through this post, it is very readable and includes an
+excellent section on performing inference with a stochastically trained
+network that I will only touch on.
 
 [^singh]:
     {% citation
@@ -37,10 +38,44 @@ inference with a stochastically trained network that I will only touch on.
       url="https://papers.neurips.cc/paper_files/paper/2016/hash/c51ce410c124a10e0db5e4b97fc2af39-Abstract.html"
     %}
 
-[arxiv]: https://arxiv.org/abs/1605.06465
+[^hinton]:
+    {% citation
+      author_last="Geoffrey E. Hinton, Nitish Srivastava, Alex Krizhevsky, Ilya Sutskever, and Ruslan Salakhutdinov"
+      work_title="Improving neural networks by preventing co-adaptation of feature detectors"
+      container_title="arXiv"
+      volume="abs/1207.0580"
+      date="2012"
+      url="https://api.semanticscholar.org/CorpusID:14832074"
+    %}
+
+[^huang]:
+    {% citation
+      author_last="Huang, Gao and Sun, Yu and Liu, Zhuang and Sedra, Daniel and Weinberger, Kilian Q."
+      work_title="Deep Networks with Stochastic Depth"
+      container_title="Computer Vision -- ECCV 2016"
+      editor="Leibe, Bastian and Matas, Jiri and Sebe, Nicu and Welling, Max"
+      date="2016"
+      publisher="Springer International Publishing"
+      first_page="646"
+      last_page="661"
+      doi="10.1007/978-3-319-46493-0_39"
+    %}
+
+[^he]:
+    {% citation
+      author_last="He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian"
+      work_title="Deep Residual Learning for Image Recognition"
+      container_title="2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)"
+      date="2016"
+      first_page="770"
+      last_page="778"
+      doi="10.1109/CVPR.2016.90"
+    %}
+
+[paper]: https://papers.neurips.cc/paper_files/paper/2016/hash/c51ce410c124a10e0db5e4b97fc2af39-Abstract.html
 [do]: https://arxiv.org/abs/1207.0580
-[sd]: https://arxiv.org/abs/1603.09382
-[rn]: https://arxiv.org/abs/1512.03385
+[sd]: https://doi.org/10.1007/978-3-319-46493-0_39
+[rn]: https://doi.org/10.1109/CVPR.2016.90
 
 As you may recall, dropout works by randomly setting individual neuron outputs
 in a network to zero, essentially dropping those neurons from training and
@@ -67,7 +102,7 @@ included below, showing feed-forward and ResNets in this scheme:
 ![A diagram representation of blocks and units for a feed-forward and ResNet
 architecture][feed_res_image]
 
-[feed_res_image]: {{ file_dir }}/feed_and_res.svg 
+[feed_res_image]: {{ file_dir }}/feed_and_res.svg
 
 Things become more interesting when we start thinking about stochastic
 training methods in this manner. Dropout can be thought of as randomly
