--- a/_posts/2016-09-08-lab41_resnet.md
+++ b/_posts/2016-09-08-lab41_resnet.md
@@ -12,6 +12,7 @@ image_alt: >
 categories: 
   - reading-group
   - lab41
+use_latex: true
 ---
 
 {% capture file_dir %}/files/resnet/{% endcapture %}
@@ -51,14 +52,27 @@ If you have been following our [previous posts][sd_blog] this won't surprise
 you; training issues like vanishing gradients become worse as networks get
 deeper so you would expect more layers to make the network worse after some
 point. But the authors anticipate this line of reasoning and state that
-several other deep learning methods, like [batch normalization][bn_paper] (see
-[our post for a summary][bn_post]), essentially have solved these training
-issues, and yet the networks still perform increasingly poorly as their depth
-increases. For example, they compare 20- and 56-layer networks and find the
-56-layer network performs far worse; see the image below from their paper.
+several other deep learning methods, like [batch
+normalization][bn_paper][^sergey] (see [our post for a summary][bn_post]),
+essentially have solved these training issues, and yet the networks still
+perform increasingly poorly as their depth increases. For example, they
+compare 20- and 56-layer networks and find the 56-layer network performs far
+worse; see the image below from their paper.
 
 [bn_paper]: https://arxiv.org/abs/1502.03167
 [bn_post]: https://gab41.lab41.org/batch-normalization-what-the-hey-d480039a9e3b
+
+[^sergey]:
+    {% citation
+      author_last="Ioffe, Sergey and Szegedy, Christian"
+      work_title="Batch normalization: accelerating deep network training by reducing internal covariate shift"
+      container_title="Proceedings of the 32nd International Conference on International Conference on Machine Learning - Volume 37"
+      publisher="JMLR.org"
+      date="2015"
+      first_page="448"
+      last_page="456"
+      url="https://arxiv.org/abs/1502.03167"
+    %}
 
 {% capture image_1 %} {{ site.url }}/files/resnet/20_vs_56.png {% endcapture %}
 {% include figure.html
@@ -109,11 +123,11 @@ two.
 [relu]: https://en.wikipedia.org/wiki/Rectifier_%28neural_networks%29
 
 To get a little into the math behind the ResBlock: let us assume that a set of
-layers would perform best if they learned a specific function, `h(x)`. The
-authors note that the residual, `f(x) = h(x) − x`, can be learned instead and
-combined with the original input such that we recover `h(x)` as follows: `h(x)
-= f(x) + x`. This can be accomplished by adding a `+x` component to the
-network, which, thinking back to our thought experiment, is simply the
+layers would perform best if they learned a specific function, $$h(x)$$. The
+authors note that the residual, $$f(x) = h(x) − x$$, can be learned instead
+and combined with the original input such that we recover $$h(x)$$ as follows:
+$$h(x) = f(x) + x$$. This can be accomplished by adding a $$+x$$ component to
+the network, which, thinking back to our thought experiment, is simply the
 identity function. The authors hope that adding this "pass-through" to their
 layers will aid in training. As with most deep learning, there is only this
 intuition backing up the method and not any deeper understanding. However, as
