--- a/_posts/2016-12-12-lab41_swapout.md
+++ b/_posts/2016-12-12-lab41_swapout.md
@@ -13,6 +13,7 @@ image_alt: >
 categories:
   - reading-group
   - lab41
+use_latex: true
 ---
 
 {% capture file_dir %}/files/swapout/{% endcapture %}
@@ -20,7 +21,7 @@ categories:
 Next up for the reading group is [a paper about a new stochastic training
 method][paper] written by Saurabh Singh, Derek Hoiem, and David Forsyth of the
 University of Illinois at Urbana--Champaign.[^singh] Their new training method
-is like [dropout][do][^hinton], [stochastic depth][sd][^huang], and
+is like [dropout][do],[^hinton] [stochastic depth][sd],[^huang] and
 [ResNets][rn][^he] but with its own special twist. I recommend picking up the
 paper after going through this post, it is very readable and includes an
 excellent section on performing inference with a stochastically trained
@@ -89,14 +90,14 @@ some notation.
 
 I'll use block to mean a set of layers in some specific configuration (for
 example, a convolution followed by a ReLU), and a unit to be one of the
-computational nodes within the block (basically a neuron). `X` will be the
-input from the previous block, and `F(X)` will be the output from a unit
+computational nodes within the block (basically a neuron). $$X$$ will be the
+input from the previous block, and $$F(X)$$ will be the output from a unit
 within the current block.
 
 Using this notation then, we can think about ResNets as consisting of blocks
-where ever unit in the block always reports `X + F(X)`. A standard,
+where ever unit in the block always reports $$X + F(X)$$. A standard,
 feed-forward layer can be viewed in this framework as well, with each unit
-always reporting `F(X)`. The paper includes a figure, which I've edited and
+always reporting $$F(X)$$. The paper includes a figure, which I've edited and
 included below, showing feed-forward and ResNets in this scheme:
 
 ![A diagram representation of blocks and units for a feed-forward and ResNet
@@ -107,11 +108,11 @@ architecture][feed_res_image]
 Things become more interesting when we start thinking about stochastic
 training methods in this manner. Dropout can be thought of as randomly
 selecting the output for each unit from the following set of possible
-outcomes: `{0, F(X)}`. Likewise, stochastic depth can be thought of as
-randomly selecting between the outcomes `{X, F(X)}` for each block, so that
-every unit in the block returns `X` or `F(X)` together. Both of these training
-methods are shown in the figure below, which is again has been modified from
-the paper:
+outcomes: $$\{0, F(X)\}$$. Likewise, stochastic depth can be thought of as
+randomly selecting between the outcomes $$\{X, F(X)\}$$ for each block, so
+that every unit in the block returns $$X$$ or $$F(X)$$ together. Both of these
+training methods are shown in the figure below, which is again has been
+modified from the paper:
 
 ![A diagram representation of blocks and units for dropout and stochastic
 depth architecture][drop_stoch_image]
@@ -122,15 +123,15 @@ So now that I've laid the groundwork, what does swapout add? Well, add isn't
 really the right word, swapout combines! It randomly selects from the four
 possible outcomes mentioned above: feed-forward, ResNet, dropout, and
 stochastic depth. They do this by allowing each unit to randomly select from
-the following outcomes: `{0, X, F(X), X + F(X)}`. Therefore, swapout samples
-from every possible stochastic depth and ResNet architecture, both including
-and not include dropout!
+the following outcomes: $$\{0, X, F(X), X + F(X)\}$$. Therefore, swapout
+samples from every possible stochastic depth and ResNet architecture, both
+including and not include dropout!
 
 In addition to swapout, the authors define a simpler version called
-skipforward. Skipforward only allows units to select from the outcomes `{X,
-F(X)}`, that is limiting the choice to only stochastic depth and feed-forward.
-Both of these architectures are shown in the figure below, which is again from
-the paper with modification:
+skipforward. Skipforward only allows units to select from the outcomes $$\{X,
+F(X)\}$$, that is limiting the choice to only stochastic depth and
+feed-forward. Both of these architectures are shown in the figure below, which
+is again from the paper with modification:
 
 ![A diagram representation of blocks and units for skipforward and swapout
 depth architecture][skip_swap_image]
@@ -156,12 +157,24 @@ the same prediction. We can make the network static in two ways:
 Although it seems like deterministic inference should be faster (because it
 does not require running multiple networks) it has several drawbacks. The
 first drawback is that you can not actually calculate the true expectation
-value for a swapout network, only approximate it. The second is the the fact
-that [batch normalization][bn]---one of the most powerful training
+value for a swapout network, only approximate it. The second is the fact that
+[batch normalization][bn][^ioffe]---one of the most powerful training
 methodologies---does not work with deterministic inference. The authors
 conclude (through testing) that stochastic inference works best.
 
-[bn]: http://jmlr.org/proceedings/papers/v37/ioffe15.pdf
+[bn]: https://arxiv.org/abs/1502.03167
+
+[^ioffe]:
+    {% citation
+      author_last="Ioffe, Sergey and Szegedy, Christian"
+      work_title="Batch normalization: accelerating deep network training by reducing internal covariate shift"
+      container_title="Proceedings of the 32nd International Conference on International Conference on Machine Learning - Volume 37"
+      publisher="JMLR.org"
+      date="2015"
+      first_page="448"
+      last_page="456"
+      url="https://arxiv.org/abs/1502.03167"
+    %}
 
 The authors test swapout and skipforward networks against networks trained
 with stochastic depth, dropout, and various ResNet architectures. They
