--- a/_posts/2016-09-08-lab41_resnet.md
+++ b/_posts/2016-09-08-lab41_resnet.md
@@ -53,7 +53,7 @@ you; training issues like vanishing gradients become worse as networks get
 deeper so you would expect more layers to make the network worse after some
 point. But the authors anticipate this line of reasoning and state that
 several other deep learning methods, like [batch
-normalization][bn_paper][^sergey] (see [our post for a summary][bn_post]),
+normalization][bn_paper][^ioffe] (see [our post for a summary][bn_post]),
 essentially have solved these training issues, and yet the networks still
 perform increasingly poorly as their depth increases. For example, they
 compare 20- and 56-layer networks and find the 56-layer network performs far
@@ -62,7 +62,7 @@ worse; see the image below from their paper.
 [bn_paper]: https://arxiv.org/abs/1502.03167
 [bn_post]: https://gab41.lab41.org/batch-normalization-what-the-hey-d480039a9e3b
 
-[^sergey]:
+[^ioffe]:
     {% citation
       author_last="Ioffe, Sergey and Szegedy, Christian"
       work_title="Batch normalization: accelerating deep network training by reducing internal covariate shift"
