Update more refs

--- a/_posts/2016-09-08-lab41_resnet.md
+++ b/_posts/2016-09-08-lab41_resnet.md
@@ -111,7 +111,7 @@ as ResBlocks.
   image_alt="A diagram of a ResNet block, or ResBlock."
   caption="A ResBlock; a residual function f(x) is learned on the top and
   information is passed along the bottom unchanged. Image modified from Huang
-  et al.'s Stochastic Depth paper."
+  <em>et al.</em>'s Stochastic Depth paper."
 %}
 
 The ResBlock is constructed out of normal network layers connected with
