Use canonical_url for archived review system
This commit refactors the entire re-read and archived review system to
use the `canonical_url` front matter key instead of the custom
`canonical_for` key. This aligns the internal implementation with the
key already used by the `jekyll-seo-tag` plugin, simplifying the front
matter for archived reviews.

To prevent bugs where a book with a legitimate external canonical link
might be incorrectly treated as an internal archive, the logic in all
affected plugins has been made more robust. The system now specifically
checks if the `canonical_url` value is a root-relative path (starts with
`/`) to identify an archived review.

All corresponding test files have been updated to use `canonical_url` in
their mocks and to include new tests that verify books with external
canonical URLs are not incorrectly filtered.

--- a/_books/hyperion/review-2023-10-17.md
+++ b/_books/hyperion/review-2023-10-17.md
@@ -10,7 +10,7 @@ image: /books/covers/hyperion.jpg
 awards:
   - hugo
   - locus
-canonical_for: /books/hyperion/
+canonical_url: /books/hyperion/
 ---
 
 <cite class="book-title">{{ page.title }}</cite> was not at all the book I
