Use Claude to typo correct posts

--- a/_posts/2016-07-11-SAT2Vec.md
+++ b/_posts/2016-07-11-SAT2Vec.md
@@ -8,7 +8,7 @@ image: /files/sat2vec/Pasternak_The_Night_Before_the_Exam.jpg
 image_alt: >
   An impressionistic painting titled 'Night Before the Exam' by Leonid
   Pasternak. The painting shows four students sitting around a kitchen table
-  studying for a exam. One student holds a skull, while the others longue
+  studying for an exam. One student holds a skull, while the others lounge
   around smoking or studying books or papers.
 redirect_from: /2016/07/11/SAT2Vec/
 categories:
