--- a/_posts/2016-09-08-lab41_resnet.md
+++ b/_posts/2016-09-08-lab41_resnet.md
@@ -156,7 +156,7 @@ paper.
   image_alt="A plot showing how deeper networks train better than shallow
   networks when using ResBlocks."
   caption="A comparison of the performance of two networks: the ones on the
-  left do not use ResBlocks, while the ones on the right do. Notice the the
+  left do not use ResBlocks, while the ones on the right do. Notice that the
   34-layer network performs better than the 18-layer network, but only when
   using ResBlocks."
 %}
