--- a/_posts/2016-12-12-lab41_swapout.md
+++ b/_posts/2016-12-12-lab41_swapout.md
@@ -4,7 +4,7 @@ title: "Lab41 Reading Group: Swapout: Learning an Ensemble of Deep Architectures
 gab41: https://gab41.lab41.org/lab41-reading-group-swapout-learning-an-ensemble-of-deep-architectures-e67d2b822f8a
 description: >
   Want to train a network but unsure about dropout vs. stochastic depth?
-  Should you use a ResNet? Stop worry and use Swapout; it does all that and
+  Should you use a ResNet? Stop worrying and use Swapout; it does all that and
   more!
 image: /files/swapout/header.jpg
 image_alt: >
@@ -125,7 +125,7 @@ possible outcomes mentioned above: feed-forward, ResNet, dropout, and
 stochastic depth. They do this by allowing each unit to randomly select from
 the following outcomes: $$\{0, X, F(X), X + F(X)\}$$. Therefore, swapout
 samples from every possible stochastic depth and ResNet architecture, both
-including and not include dropout!
+including and not including dropout!
 
 In addition to swapout, the authors define a simpler version called
 skipforward. Skipforward only allows units to select from the outcomes $$\{X,
